--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <!-- <body style="background-color: aqua;"> -->
 <body class="container">
     <app-root></app-root>
-<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="scripts-OT3SY5B6.js" defer></script><script src="main-DXCJKXUI.js" type="module"></script></body>
+<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="scripts-OT3SY5B6.js" defer></script><script src="main-RAF7KRER.js" type="module"></script></body>
 </html>
