--- a/404.html
+++ b/404.html
@@ -10,5 +10,14 @@
 <!-- <body style="background-color: aqua;"> -->
 <body class="container">
     <app-root></app-root>
-<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="scripts-OT3SY5B6.js" defer></script><script src="main-WB6KTD23.js" type="module"></script></body>
+<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="scripts-OT3SY5B6.js" defer></script><script src="main-7H6UAFB7.js" type="module"></script>
+
+<script type="text/javascript">
+  // Redirect to the index page for Angular routing
+  if (window.location.pathname !== '/') {
+    window.location.replace('/' + window.location.hash);
+  }
+</script>
+</body>
 </html>
+
