--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <!-- <body style="background-color: aqua;"> -->
 <body class="container">
     <app-root></app-root>
-<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="scripts-OT3SY5B6.js" defer></script><script src="main-WB6KTD23.js" type="module"></script></body>
+<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="scripts-OT3SY5B6.js" defer></script><script src="main-FUW4IIZ3.js" type="module"></script></body>
 </html>
