--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=/#/">
+    <meta http-equiv="refresh" content="0;">
     <script type="text/javascript">
-        window.location.href = '/#' + window.location.pathname + window.location.search + window.location.hash;
+        window.location.href = '/' + window.location.pathname + window.location.search + window.location.hash;
     </script>
 </head>
 <body>
