--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Not Found</title>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta http-equiv="refresh" content="0; url=/portfolio/" />
     <script type="text/javascript">
         (function() {
+            // Redirect to the Angular app
             var path = window.location.pathname;
-            // Redirect to the root of the Angular app
-            window.location.href = '/' + path;
+            window.location.href = '/portfolio' + path;
         })();
     </script>
 </head>
